Index template updated

--- a/template.html
+++ b/template.html
@@ -4,19 +4,16 @@
 <title>Dunder Mifflin</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
-<link href = "StyleSheet2.css" rel = "stylesheet">
-<script src="indexJS.js"></script>
+
 </head>
 
-<body>
+<body class = "body">
 <div class = "nav">
 	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
 	<a class = "leftNav" href="index.html"> HOME</a>
 	<a class = "leftNav" href="products.html"> PAPER</a>
 	<a class = "leftNav" href="about.html"> ABOUT</a>
 	<a class = "leftNav" href="FAQ.html"> FAQ</a>
-	
-	
 	<a class = "rightNav" href = "login.html">LOG IN</a>
 	<a class = "rightNav" href = "cart.html"><img class = rightImg" width = "30" 
 		height = "30" src = "Images/cart_icon.png"></a>
@@ -32,15 +29,8 @@
 <br><br><br><br><br><br><br><br><br>
 </body>
 
-
-
-
 <footer class="footer">
 
 </footer>
-
-
-
-
 
 </html>
