--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
 	<a class = "leftNav" href="about.html"> ABOUT</a>
 	<a class = "leftNav" href="FAQ.html"> FAQ</a>
 	<a class = "rightNav" href = "login.html">LOG IN</a>
-	<a class = "rightNav" href = "cart.html"><img class = rightImg" width = "30" 
+	<a class = "rightNav" href = "cart.html"><img class = "rightImg" width = "30" 
 		height = "30" src = "Images/cart_icon.png"></a>
 	<form class = "rightNav"><input type = "search" placeholder = "Search" 
 		style="width: 300px; padding: 9px 20px; margin: 18px 10px; 
