--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
 <title>Dunder Mifflin</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "IshaniStyleSheet.css" rel = "stylesheet">
 
 </head>
 
