--- a/login.html
+++ b/login.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Login | DUNDER MIFFLIN</title>
-<link rel="stylesheet" href="IshaniStyleSheet.css">
+<title>Dunder Mifflin</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "IshaniStyleSheet.css" rel = "stylesheet">
 
 </head>
 
-<body>
-<header class = "header">
-   <nav class = "nav">
-    	<ul class = "navUl">
-	   <li class = "logo"><a href="home.html"><img
-		src="Images/Dunder_Mifflin_logo.png" width="100"
-		height="40"></a>
-	   </li>
-	   <li class = "navLi"><a href="home.html"> HOME</a></li>
-	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
-	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
-	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-	   <ul class = "navRight" style = "list-style: none;">
-	   <li class = "navLi"><form><input type = "search"
-		placeholder = "Search" style="width: 300px;padding: 9px
-		20px;margin: 10px 0;display:inline-block;border: 1px solid
-		#ccc;box-sizing: border-box;"></form></li>
-
-	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
-		height = "20" src = "Images/cart_icon.png"></a></li>
-	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
-	   </ul>
-  	</ul>
-   </nav>
-</header>
+<body class = "body">
+<div class = "nav">
+	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
+	<a class = "leftNav" href="index.html"> HOME</a>
+	<a class = "leftNav" href="products.html"> PAPER</a>
+	<a class = "leftNav" href="about.html"> ABOUT</a>
+	<a class = "leftNav" href="FAQ.html"> FAQ</a>
+	<a class = "rightNav" href = "login.html">LOG IN</a>
+	<a class = "rightNav" href = "cart.html"><img class = "rightImg" width = "30" 
+		height = "30" src = "Images/cart_icon.png"></a>
+	<form class = "rightNav"><input type = "search" placeholder = "Search" 
+		style="width: 300px; padding: 9px 20px; margin: 18px 10px; 
+		display:inline-block; border: 1px solid#ccc; box-sizing: 
+		border-box;"></form>
+</div>
 
 <p>
 
@@ -67,15 +57,12 @@
 
 
 
-<br></br>
+  <br><br><br><br><br><br>
 
 
+</body>
 <footer class="footer">
 
 </footer>
-
-
-
-
 
 </html>
