--- a/home.html
+++ b/home.html
@@ -2,128 +2,56 @@
 <html>
 <head>
 <title>HOME | DUNDER MIFFLIN</title>
-<! <link rel="stylesheet" href="IshaniStyleSheet.css"/>
 
-<link href = "StyleSheet.css" rel = "stylesheet"> 
+<link href = "StyleSheet.css" rel = "stylesheet">
+
 </head>
 
-
-
-
-
 <body>
+<div class = "nav">
+	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
+	<a class = "leftNav" href="home.html"> HOME</a>
+	<a class = "leftNav" href="products.html"> PAPER</a>
+	<a class = "leftNav" href="about.html"> ABOUT</a>
+	<a class = "leftNav" href="FAQ.html"> FAQ</a>
+	<a class = "rightNav" href = "login.html">LOG IN</a>
+	<a class = "rightNav" href = "cart.html"><img class = "rightImg" width = "30" 
+		height = "30" src = "Images/cart_icon.png"></a>
+	<form class = "rightNav"><input type = "search" placeholder = "Search" 
+		style="width: 300px; padding: 9px 20px; margin: 18px 10px; 
+		display:inline-block; border: 1px solid#ccc; box-sizing: 
+		border-box;"></form>
+</div>
 
-   <button name="changec">Switch Color</button>
-   <script type="text/javascript">
-	var i = 0;
-	function changeColor()
-			{
-	var color = ["#192a45","#282828", "white"];
-                	
-		i = i < color.length ? ++i : 0;
-		document.querySelector("body").style.background = color[i];
-	}
-	       
-	document.querySelector('[name="changec"]').addEventListener("click",changeColor);
-   </script>
-
-
-
-
-<header class = "header">
-   <nav class = "nav">
-    	<ul class = "navUl">
-	   <li class = "logo"><a href="home.html"><img
-		src="Dunder_Mifflin_logo.png" width="100"
-		height="40"></a>
-	   </li>
-	   <li class = "navLi"><a href="home.html"> HOME</a></li>
-	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
-	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
-	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-	   <ul class = "navRight" style = "list-style: none;">
-	   <li class = "navLi"><form><input type = "search"
-		placeholder = "Search" style="width: 300px;padding: 9px      20px;margin: 10px 0;display:inline-block;border: 1px solid
-		#ccc;box-sizing: border-box;"></form></li>
-
-	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
-		height = "20" src = "cart_icon.png"></a></li>
-	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
-	   </ul>
-  	</ul>
-   </nav>
-</header>
-
-
-
-   <script>
-	  var i = 0;
-	  var images = [];
-	  var time = 3000;
-
-
-	  images[0] = 'Header_Image.png';
-	  images[1] = 'kids.png';
-	  images[2] = 'CSC_317_DUNDER_MIFFLIN_IMG_33.png';
-
-	  function changeImg(){
-		document.slide.src = images[i];
-
-		if(i < images.length - 1) {
-		   i++;
-		} else {
-		  i = 0;
-		}
-
-		setTimeout("changeImg()", time);
-	  }
-
-	  window.onload = changeImg;
-
-    </script>
-
-
-
-
-
-
-
-<img name="slide" width="100%" height=500>
+<img src="Images/Header_Image.png" width="101%">
 <center>
-
-
-	<table>
-		<tr>
-	<td>
-
-		<img src = "PaperCASE.png" width=500px>
-
-	</td>
-
+   <table>
+	<tr>
+          <td>
+		<img src = "Images/PaperCASE.png" width=500px>
+	  </td>
 	<td style="padding-left: 50px">
 	<br><div style = "font-size: 20px;">Only</div>
 	<br><div style = "font-size: 80px; font-weight: bold;">
 	$39.99</div>
 	<br><div style = "font-size: 40px;">8.5" x 11" 20lb
 	CLEAR paper</div>
-</td>
-
-
-</tr>
-</table>
+	  </td>
+	</tr>
+   </table>
 
 <br><br><br>
 <h2>FEATURED PRODUCTS</h2>
 <br><br>
 <table>
 	<td>
-		<tr><a href="paperBlue.html"><img src = "paperBlue.png"
+		<tr><a href="paperBlue.html"><img src = "Images/paperBlue.png"
 	width = "200" height = "200"></a></tr>
-		<tr><a href="paperPink.html"><img src = "paperPink.png"
+		<tr><a href="paperPink.html"><img src = "Images/paperPink.png"
 	width = "200" height = "200"></a></tr>
-		<tr><a href="paperYellow.html"><img src = "paperYellow.png"
+		<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png"
 	width = "200" height = "200"></a></tr>
-		<tr><a href="paperRed.html"><img src = "paperRed.png"
+		<tr><a href="paperRed.html"><img src = "Images/paperRed.png"
 	width = "200" height = "200"></a></tr>
 	</td>
 </table>
@@ -137,9 +65,5 @@
 <footer class="footer">
 
 </footer>
-
-
-
-
 
 </html>
