Index is now the main page

--- a/index.html
+++ b/index.html
@@ -1,51 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dunder Mifflin</title>
-<link rel="stylesheet" href="IshaniStyleSheet.css">
+<title>HOME | DUNDER MIFFLIN</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
 </head>
 
 <body>
-<header class = "header">
-   <nav class = "nav">
-    	<ul class = "navUl">
-	   <li class = "logo"><a href="home.html"><img
-		src="Images/Dunder_Mifflin_logo.png" width="100"
-		height="40"></a>
-	   </li>
-	   <li class = "navLi"><a href="home.html"> HOME</a></li>
-	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
-	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
-	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-	   <ul class = "navRight" style = "list-style: none;">
-	   <li class = "navLi"><form><input type = "search"
-		placeholder = "Search" style="width: 300px;padding: 9px
-		20px;margin: 10px 0;display:inline-block;border: 1px solid
-		#ccc;box-sizing: border-box;"></form></li>
+<div class = "nav">
+	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
+	<a class = "leftNav" href="index.html"> HOME</a>
+	<a class = "leftNav" href="products.html"> PAPER</a>
+	<a class = "leftNav" href="about.html"> ABOUT</a>
+	<a class = "leftNav" href="FAQ.html"> FAQ</a>
+	<a class = "rightNav" href = "login.html">LOG IN</a>
+	<a class = "rightNav" href = "cart.html"><img class = "rightImg" width = "30" 
+		height = "30" src = "Images/cart_icon.png"></a>
+	<form class = "rightNav"><input type = "search" placeholder = "Search" 
+		style="width: 300px; padding: 9px 20px; margin: 18px 10px; 
+		display:inline-block; border: 1px solid#ccc; box-sizing: 
+		border-box;"></form>
+</div>
 
-	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
-		height = "20" src = "Images/cart_icon.png"></a></li>
-	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
-	   </ul>
-  	</ul>
-   </nav>
-</header>
+<img src="Images/Header_Image.png" width="101%">
+<center>
+   <table>
+	<tr>
+          <td>
+		<img src = "Images/PaperCASE.png" width=500px>
+	  </td>
+	<td style="padding-left: 50px">
+	<br><div style = "font-size: 20px;">Only</div>
+	<br><div style = "font-size: 80px; font-weight: bold;">
+	$39.99</div>
+	<br><div style = "font-size: 40px;">8.5" x 11" 20lb
+	CLEAR paper</div>
+</td>
 
-<img src="Images/Header_Image.png" width="100%">
 
-<p>
+</tr>
+</table>
 
-<br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br>
-
-</p>
+<br><br><br>
+<h2>FEATURED PRODUCTS</h2>
+<br><br>
+<table>
+	<td>
+		<tr><a href="paperBlue.html"><img src = "Images/paperBlue.png"
+	width = "200" height = "200"></a></tr>
+		<tr><a href="paperPink.html"><img src = "Images/paperPink.png"
+	width = "200" height = "200"></a></tr>
+		<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png"
+	width = "200" height = "200"></a></tr>
+		<tr><a href="paperRed.html"><img src = "Images/paperRed.png"
+	width = "200" height = "200"></a></tr>
+	</td>
+</table>
+</center>
 </body>
 
 
@@ -55,9 +67,5 @@
 <footer class="footer">
 
 </footer>
-
-
-
-
 
 </html>
